--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {}
+  "devDependencies": {},
+  "engines": {
+    "node": "15.x"
+  }
 }
