--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "dependencies": {
     "axios": ">=0.21.1",
     "bulma": "^0.7.4",
+    "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.14.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^6.0.1",
-    "react-router-dom": "^5.0.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.8",
     "react-slick": "^0.23.2",
     "redux": "^4.0.1",
